# nh3

./: .gitignore  .readthedocs.yml  Cargo.toml  README.md  nh3.pyi  pyproject.toml
.github/: dependabot.yml
.github/workflows/: CI.yml
docs/: conf.py  index.rst  requirements.txt
docs/superpowers/specs/: 2026-05-26-issue-78-additive-builder-options-design.md
src/: lib.rs
tests/: test_doctests.py  test_nh3.py
