[package]
name = "nh3"
version = "0.2.20"
authors = ["messense <messense@icloud.com>"]
edition = "2021"
description = "Python bindings to the ammonia HTML sanitization library."
license = "MIT"
repository = "https://github.com/messense/nh3"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ammonia = "4.0.0"
pyo3 = { version = "0.23.5", features = ["abi3-py38", "generate-import-lib"] }
